--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
@@ -39,9 +39,14 @@
   cursor: pointer;
 }
 
-.label-text:hover {
-  border-bottom: 0.5px solid var(--primary-color);
+.label-text-without-pointer {
+  font-weight: 600;
+  color: var(--primary-color);
 }
+
+/* .label-text:hover {
+  border-bottom: 0.5px solid var(--primary-color);
+} */
 
 
 .sub-card {
