VQ-995/Underwriting screens

--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -5,7 +5,7 @@
     <div id="container">
         <div class="col-md-12 text-center">
             <h4>Group quote summary</h4>
-            <h6 class="mt-4" style="color: gray;">Here is the quote summary for the <b style="color: black;">{{ productSelected }} product</b></h6>
+            <h6 class="mt-4" style="color: gray;">Here is the quote summary for the <b style="color: black;">{{ productSelected }}</b></h6>
            </div>
 
            <div style="display: flex; justify-content: center;">
