--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -96,9 +96,10 @@
                                     
                                     <div class="col-lg-12 col-md-12 col-sm-12" *ngIf="selectedRateType !== 'C' ">
                                         <label for="overridePremiums">Premium mask</label>
-                                        <select class="form-select" [id]="'premiumMask'" formControlName="premiumMask">
+                                        <select class="form-select" [id]="'premiumMask'" formControlName="premiumMask"
+                                        (change)="getSelectedPmasCode($event)">
                                             <ng-container *ngFor="let mask of premiumMask">
-                                                <option [value]="mask['pmas_code']">{{ mask['pmas_sht_desc'] | titlecase }}</option>
+                                                <option [value]="mask['pmas_sht_desc']">{{ mask['pmas_sht_desc'] | titlecase }}</option>
                                             </ng-container>
                                         </select>
                                     </div>
